--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -127,18 +127,19 @@
 
                 <View style="@style/ConfigDivider"/>
 
-                <TextView
+                <EditText
                     android:id="@+id/digitsTxt"
                     style="@style/InnerConfigTxt"
-                    android:layout_marginTop="8dp" />
+                    android:layout_width="60dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:enabled="false"/>
 
-                <android.support.v7.widget.AppCompatSeekBar
+                <SeekBar
                     android:id="@+id/seekBar"
-                    android:layout_width="match_parent"
-                    android:thumb="@drawable/ic_home"
-                    android:layout_height="25dp"
-                    android:background="@android:color/holo_blue_bright"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    style="@style/SeekBarStyle"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
