--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,4 +61,12 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <!-- SeekBar -->
+    <style name="SeekBarStyle" parent="Widget.AppCompat.SeekBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:colorAccent">#8EDE21</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
 </resources>
