--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -134,12 +134,14 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_marginTop="8dp"
-                    android:enabled="false"/>
+                    android:enabled="false"
+                    android:focusable="false"/>
 
                 <SeekBar
                     android:id="@+id/seekBar"
                     android:layout_marginTop="8dp"
-                    style="@style/SeekBarStyle"/>
+                    style="@style/SeekBarStyle"
+                    android:focusable="false"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
